@@ -1,5 +1,13 @@
 Changes since 0.3:
 
+Add CREATE INDEX (with a syntax which seems compatible with most other
+databases I tried):
+    CREATE [UNIQUE] INDEX index-name ON table(column, ...)
+As with the MySQL INDEX syntax
+    CREATE TABLE(a INTEGER, INDEX(a))
+the index is a no-op, but in this case UNIQUE is not a no-op - it
+has the same effect as any other unique constraint.
+
 ALTER TABLE can now control the position of the added column,
 using the same syntax as MySQL:
   ALTER TABLE ADD COLUMN B INTEGER AFTER A
